--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+.btn {
+  @apply w-44 rounded-md border-2 border-solid border-transparent bg-black px-4 py-1 text-base font-semibold text-white transition-colors duration-300 ease-in-out md:w-[180px] md:text-lg lg:w-[220px] lg:px-3 lg:py-[10px] lg:text-xl;
+}
+
+.btn:hover {
+  @apply border-black bg-white font-bold text-black;
+}
+
+/* Disable hover styles for touch devices */
+@media (hover: none) {
+  .btn:hover {
+    @apply border-black bg-white font-bold text-black;
+  }
+}
