--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,10 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.btn {
-  @apply w-44 rounded-md border-2 border-solid border-transparent bg-black px-4 py-1 text-base font-semibold text-white transition-colors duration-300 ease-in-out md:w-[180px] md:text-lg lg:w-[220px] lg:px-3 lg:py-[10px] lg:text-xl;
+.btn-black {
+  @apply w-44 rounded-md border-2 border-solid border-transparent bg-black px-4 py-1 text-base font-semibold text-white transition-colors duration-300 ease-in-out md:w-[180px] md:text-lg md:hover:border-black md:hover:bg-white md:hover:font-bold md:hover:text-black lg:w-[220px] lg:px-3 lg:py-[10px] lg:text-xl;
 }
 
-.btn:hover {
-  @apply border-black bg-white font-bold text-black;
-}
-
-/* Disable hover styles for touch devices */
-@media (hover: none) {
-  .btn:hover {
-    @apply border-black bg-white font-bold text-black;
-  }
+.btn-white {
+  @apply w-44 rounded-md border-2 border-solid border-black bg-white px-4 py-1 text-base font-semibold text-black transition-colors duration-300 ease-in-out md:w-[180px] md:text-lg md:hover:border-transparent md:hover:bg-black md:hover:font-bold md:hover:text-white lg:w-[220px] lg:px-3 lg:py-[10px] lg:text-xl;
 }
